# galaga

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO.md
src/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp  main.c
test/: main.cpp
